src/perl6_curl.h

int perl6_curle_conv_failed ();
int perl6_curle_conv_reqd ();
int perl6_curle_ssl_cacert_badfile ();
int perl6_curle_remote_file_not_found ();
int perl6_curle_ssh ();
int perl6_curle_ssl_shutdown_failed ();
int perl6_curle_again ();
int perl6_curle_ssl_crl_badfile ();
int perl6_curle_ssl_issuer_error ();
int perl6_curle_ftp_pret_failed ();
int perl6_curle_rtsp_cseq_error ();
int perl6_curle_rtsp_session_error ();
int perl6_curle_ftp_bad_file_list ();
int perl6_curle_chunk_failed ();
int perl6_curlopt_file ();
int perl6_curlopt_url ();
int perl6_curlopt_port ();
int perl6_curlopt_proxy ();
int perl6_curlopt_userpwd ();
int perl6_curlopt_proxyuserpwd ();
int perl6_curlopt_range ();
int perl6_curlopt_infile ();
int perl6_curlopt_errorbuffer ();
int perl6_curlopt_writefunction ();
int perl6_curlopt_readfunction ();
int perl6_curlopt_timeout ();
int perl6_curlopt_infilesize ();
int perl6_curlopt_postfields ();
int perl6_curlopt_referer ();
int perl6_curlopt_ftpport ();
int perl6_curlopt_useragent ();
int perl6_curlopt_low_speed_limit ();
int perl6_curlopt_low_speed_time ();
int perl6_curlopt_resume_from ();
int perl6_curlopt_cookie ();
int perl6_curlopt_httpheader ();
int perl6_curlopt_httppost ();
int perl6_curlopt_sslcert ();
int perl6_curlopt_keypasswd ();
int perl6_curlopt_crlf ();
int perl6_curlopt_quote ();
int perl6_curlopt_writeheader ();
int perl6_curlopt_cookiefile ();
int perl6_curlopt_sslversion ();
int perl6_curlopt_timecondition ();
int perl6_curlopt_timevalue ();
int perl6_curlopt_customrequest ();
int perl6_curlopt_stderr ();
int perl6_curlopt_postquote ();
int perl6_curlopt_writeinfo ();
int perl6_curlopt_verbose ();
int perl6_curlopt_header ();
int perl6_curlopt_noprogress ();
int perl6_curlopt_nobody ();
int perl6_curlopt_failonerror ();
int perl6_curlopt_upload ();
int perl6_curlopt_post ();
int perl6_curlopt_dirlistonly ();
int perl6_curlopt_append ();
int perl6_curlopt_netrc ();
int perl6_curlopt_followlocation ();
int perl6_curlopt_transfertext ();
int perl6_curlopt_put ();
int perl6_curlopt_progressfunction ();
int perl6_curlopt_progressdata ();
int perl6_curlopt_autoreferer ();
int perl6_curlopt_proxyport ();
int perl6_curlopt_postfieldsize ();
int perl6_curlopt_httpproxytunnel ();
int perl6_curlopt_interface ();
int perl6_curlopt_krblevel ();
int perl6_curlopt_ssl_verifypeer ();
int perl6_curlopt_cainfo ();
int perl6_curlopt_maxredirs ();
int perl6_curlopt_filetime ();
int perl6_curlopt_telnetoptions ();
int perl6_curlopt_maxconnects ();
int perl6_curlopt_closepolicy ();
int perl6_curlopt_fresh_connect ();
int perl6_curlopt_forbid_reuse ();
int perl6_curlopt_random_file ();
int perl6_curlopt_egdsocket ();
int perl6_curlopt_connecttimeout ();
int perl6_curlopt_headerfunction ();
int perl6_curlopt_httpget ();
int perl6_curlopt_ssl_verifyhost ();
int perl6_curlopt_cookiejar ();
int perl6_curlopt_ssl_cipher_list ();
int perl6_curlopt_http_version ();