lib/WWW/Curl/Symbols.pm6

sub perl6_curle_conv_failed returns int is native('libperl6_curl') { * }
sub CURLE_CONV_FAILED is export { perl6_curle_conv_failed }
sub perl6_curle_conv_reqd returns int is native('libperl6_curl') { * }
sub CURLE_CONV_REQD is export { perl6_curle_conv_reqd }
sub perl6_curle_ssl_cacert_badfile returns int is native('libperl6_curl') { * }
sub CURLE_SSL_CACERT_BADFILE is export { perl6_curle_ssl_cacert_badfile }
sub perl6_curle_remote_file_not_found returns int is native('libperl6_curl') { * }
sub CURLE_REMOTE_FILE_NOT_FOUND is export { perl6_curle_remote_file_not_found }
sub perl6_curle_ssh returns int is native('libperl6_curl') { * }
sub CURLE_SSH is export { perl6_curle_ssh }
sub perl6_curle_ssl_shutdown_failed returns int is native('libperl6_curl') { * }
sub CURLE_SSL_SHUTDOWN_FAILED is export { perl6_curle_ssl_shutdown_failed }
sub perl6_curle_again returns int is native('libperl6_curl') { * }
sub CURLE_AGAIN is export { perl6_curle_again }
sub perl6_curle_ssl_crl_badfile returns int is native('libperl6_curl') { * }
sub CURLE_SSL_CRL_BADFILE is export { perl6_curle_ssl_crl_badfile }
sub perl6_curle_ssl_issuer_error returns int is native('libperl6_curl') { * }
sub CURLE_SSL_ISSUER_ERROR is export { perl6_curle_ssl_issuer_error }
sub perl6_curle_ftp_pret_failed returns int is native('libperl6_curl') { * }
sub CURLE_FTP_PRET_FAILED is export { perl6_curle_ftp_pret_failed }
sub perl6_curle_rtsp_cseq_error returns int is native('libperl6_curl') { * }
sub CURLE_RTSP_CSEQ_ERROR is export { perl6_curle_rtsp_cseq_error }
sub perl6_curle_rtsp_session_error returns int is native('libperl6_curl') { * }
sub CURLE_RTSP_SESSION_ERROR is export { perl6_curle_rtsp_session_error }
sub perl6_curle_ftp_bad_file_list returns int is native('libperl6_curl') { * }
sub CURLE_FTP_BAD_FILE_LIST is export { perl6_curle_ftp_bad_file_list }
sub perl6_curle_chunk_failed returns int is native('libperl6_curl') { * }
sub CURLE_CHUNK_FAILED is export { perl6_curle_chunk_failed }
sub perl6_curlopt_file returns int is native('libperl6_curl') { * }
sub CURLOPT_FILE is export { perl6_curlopt_file }
sub perl6_curlopt_url returns int is native('libperl6_curl') { * }
sub CURLOPT_URL is export { perl6_curlopt_url }
sub perl6_curlopt_port returns int is native('libperl6_curl') { * }
sub CURLOPT_PORT is export { perl6_curlopt_port }
sub perl6_curlopt_proxy returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXY is export { perl6_curlopt_proxy }
sub perl6_curlopt_userpwd returns int is native('libperl6_curl') { * }
sub CURLOPT_USERPWD is export { perl6_curlopt_userpwd }
sub perl6_curlopt_proxyuserpwd returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYUSERPWD is export { perl6_curlopt_proxyuserpwd }
sub perl6_curlopt_range returns int is native('libperl6_curl') { * }
sub CURLOPT_RANGE is export { perl6_curlopt_range }
sub perl6_curlopt_infile returns int is native('libperl6_curl') { * }
sub CURLOPT_INFILE is export { perl6_curlopt_infile }
sub perl6_curlopt_errorbuffer returns int is native('libperl6_curl') { * }
sub CURLOPT_ERRORBUFFER is export { perl6_curlopt_errorbuffer }
sub perl6_curlopt_writefunction returns int is native('libperl6_curl') { * }
sub CURLOPT_WRITEFUNCTION is export { perl6_curlopt_writefunction }
sub perl6_curlopt_readfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_READFUNCTION is export { perl6_curlopt_readfunction }
sub perl6_curlopt_timeout returns int is native('libperl6_curl') { * }
sub CURLOPT_TIMEOUT is export { perl6_curlopt_timeout }
sub perl6_curlopt_infilesize returns int is native('libperl6_curl') { * }
sub CURLOPT_INFILESIZE is export { perl6_curlopt_infilesize }
sub perl6_curlopt_postfields returns int is native('libperl6_curl') { * }
sub CURLOPT_POSTFIELDS is export { perl6_curlopt_postfields }
sub perl6_curlopt_referer returns int is native('libperl6_curl') { * }
sub CURLOPT_REFERER is export { perl6_curlopt_referer }
sub perl6_curlopt_ftpport returns int is native('libperl6_curl') { * }
sub CURLOPT_FTPPORT is export { perl6_curlopt_ftpport }
sub perl6_curlopt_useragent returns int is native('libperl6_curl') { * }
sub CURLOPT_USERAGENT is export { perl6_curlopt_useragent }
sub perl6_curlopt_low_speed_limit returns int is native('libperl6_curl') { * }
sub CURLOPT_LOW_SPEED_LIMIT is export { perl6_curlopt_low_speed_limit }
sub perl6_curlopt_low_speed_time returns int is native('libperl6_curl') { * }
sub CURLOPT_LOW_SPEED_TIME is export { perl6_curlopt_low_speed_time }
sub perl6_curlopt_resume_from returns int is native('libperl6_curl') { * }
sub CURLOPT_RESUME_FROM is export { perl6_curlopt_resume_from }
sub perl6_curlopt_cookie returns int is native('libperl6_curl') { * }
sub CURLOPT_COOKIE is export { perl6_curlopt_cookie }
sub perl6_curlopt_httpheader returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTPHEADER is export { perl6_curlopt_httpheader }
sub perl6_curlopt_httppost returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTPPOST is export { perl6_curlopt_httppost }
sub perl6_curlopt_sslcert returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLCERT is export { perl6_curlopt_sslcert }
sub perl6_curlopt_keypasswd returns int is native('libperl6_curl') { * }
sub CURLOPT_KEYPASSWD is export { perl6_curlopt_keypasswd }
sub perl6_curlopt_crlf returns int is native('libperl6_curl') { * }
sub CURLOPT_CRLF is export { perl6_curlopt_crlf }
sub perl6_curlopt_quote returns int is native('libperl6_curl') { * }
sub CURLOPT_QUOTE is export { perl6_curlopt_quote }
sub perl6_curlopt_writeheader returns int is native('libperl6_curl') { * }
sub CURLOPT_WRITEHEADER is export { perl6_curlopt_writeheader }
sub perl6_curlopt_cookiefile returns int is native('libperl6_curl') { * }
sub CURLOPT_COOKIEFILE is export { perl6_curlopt_cookiefile }
sub perl6_curlopt_sslversion returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLVERSION is export { perl6_curlopt_sslversion }
sub perl6_curlopt_timecondition returns int is native('libperl6_curl') { * }
sub CURLOPT_TIMECONDITION is export { perl6_curlopt_timecondition }
sub perl6_curlopt_timevalue returns int is native('libperl6_curl') { * }
sub CURLOPT_TIMEVALUE is export { perl6_curlopt_timevalue }
sub perl6_curlopt_customrequest returns int is native('libperl6_curl') { * }
sub CURLOPT_CUSTOMREQUEST is export { perl6_curlopt_customrequest }
sub perl6_curlopt_stderr returns int is native('libperl6_curl') { * }
sub CURLOPT_STDERR is export { perl6_curlopt_stderr }
sub perl6_curlopt_postquote returns int is native('libperl6_curl') { * }
sub CURLOPT_POSTQUOTE is export { perl6_curlopt_postquote }
sub perl6_curlopt_writeinfo returns int is native('libperl6_curl') { * }
sub CURLOPT_WRITEINFO is export { perl6_curlopt_writeinfo }
sub perl6_curlopt_verbose returns int is native('libperl6_curl') { * }
sub CURLOPT_VERBOSE is export { perl6_curlopt_verbose }
sub perl6_curlopt_header returns int is native('libperl6_curl') { * }
sub CURLOPT_HEADER is export { perl6_curlopt_header }
sub perl6_curlopt_noprogress returns int is native('libperl6_curl') { * }
sub CURLOPT_NOPROGRESS is export { perl6_curlopt_noprogress }
sub perl6_curlopt_nobody returns int is native('libperl6_curl') { * }
sub CURLOPT_NOBODY is export { perl6_curlopt_nobody }
sub perl6_curlopt_failonerror returns int is native('libperl6_curl') { * }
sub CURLOPT_FAILONERROR is export { perl6_curlopt_failonerror }
sub perl6_curlopt_upload returns int is native('libperl6_curl') { * }
sub CURLOPT_UPLOAD is export { perl6_curlopt_upload }
sub perl6_curlopt_post returns int is native('libperl6_curl') { * }
sub CURLOPT_POST is export { perl6_curlopt_post }
sub perl6_curlopt_dirlistonly returns int is native('libperl6_curl') { * }
sub CURLOPT_DIRLISTONLY is export { perl6_curlopt_dirlistonly }
sub perl6_curlopt_append returns int is native('libperl6_curl') { * }
sub CURLOPT_APPEND is export { perl6_curlopt_append }
sub perl6_curlopt_netrc returns int is native('libperl6_curl') { * }
sub CURLOPT_NETRC is export { perl6_curlopt_netrc }
sub perl6_curlopt_followlocation returns int is native('libperl6_curl') { * }
sub CURLOPT_FOLLOWLOCATION is export { perl6_curlopt_followlocation }
sub perl6_curlopt_transfertext returns int is native('libperl6_curl') { * }
sub CURLOPT_TRANSFERTEXT is export { perl6_curlopt_transfertext }
sub perl6_curlopt_put returns int is native('libperl6_curl') { * }
sub CURLOPT_PUT is export { perl6_curlopt_put }
sub perl6_curlopt_progressfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_PROGRESSFUNCTION is export { perl6_curlopt_progressfunction }
sub perl6_curlopt_progressdata returns int is native('libperl6_curl') { * }
sub CURLOPT_PROGRESSDATA is export { perl6_curlopt_progressdata }
sub perl6_curlopt_autoreferer returns int is native('libperl6_curl') { * }
sub CURLOPT_AUTOREFERER is export { perl6_curlopt_autoreferer }
sub perl6_curlopt_proxyport returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYPORT is export { perl6_curlopt_proxyport }
sub perl6_curlopt_postfieldsize returns int is native('libperl6_curl') { * }
sub CURLOPT_POSTFIELDSIZE is export { perl6_curlopt_postfieldsize }
sub perl6_curlopt_httpproxytunnel returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTPPROXYTUNNEL is export { perl6_curlopt_httpproxytunnel }
sub perl6_curlopt_interface returns int is native('libperl6_curl') { * }
sub CURLOPT_INTERFACE is export { perl6_curlopt_interface }
sub perl6_curlopt_krblevel returns int is native('libperl6_curl') { * }
sub CURLOPT_KRBLEVEL is export { perl6_curlopt_krblevel }
sub perl6_curlopt_ssl_verifypeer returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_VERIFYPEER is export { perl6_curlopt_ssl_verifypeer }
sub perl6_curlopt_cainfo returns int is native('libperl6_curl') { * }
sub CURLOPT_CAINFO is export { perl6_curlopt_cainfo }
sub perl6_curlopt_maxredirs returns int is native('libperl6_curl') { * }
sub CURLOPT_MAXREDIRS is export { perl6_curlopt_maxredirs }
sub perl6_curlopt_filetime returns int is native('libperl6_curl') { * }
sub CURLOPT_FILETIME is export { perl6_curlopt_filetime }
sub perl6_curlopt_telnetoptions returns int is native('libperl6_curl') { * }
sub CURLOPT_TELNETOPTIONS is export { perl6_curlopt_telnetoptions }
sub perl6_curlopt_maxconnects returns int is native('libperl6_curl') { * }
sub CURLOPT_MAXCONNECTS is export { perl6_curlopt_maxconnects }
sub perl6_curlopt_closepolicy returns int is native('libperl6_curl') { * }
sub CURLOPT_CLOSEPOLICY is export { perl6_curlopt_closepolicy }
sub perl6_curlopt_fresh_connect returns int is native('libperl6_curl') { * }
sub CURLOPT_FRESH_CONNECT is export { perl6_curlopt_fresh_connect }
sub perl6_curlopt_forbid_reuse returns int is native('libperl6_curl') { * }
sub CURLOPT_FORBID_REUSE is export { perl6_curlopt_forbid_reuse }
sub perl6_curlopt_random_file returns int is native('libperl6_curl') { * }
sub CURLOPT_RANDOM_FILE is export { perl6_curlopt_random_file }
sub perl6_curlopt_egdsocket returns int is native('libperl6_curl') { * }
sub CURLOPT_EGDSOCKET is export { perl6_curlopt_egdsocket }
sub perl6_curlopt_connecttimeout returns int is native('libperl6_curl') { * }
sub CURLOPT_CONNECTTIMEOUT is export { perl6_curlopt_connecttimeout }
sub perl6_curlopt_headerfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_HEADERFUNCTION is export { perl6_curlopt_headerfunction }
sub perl6_curlopt_httpget returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTPGET is export { perl6_curlopt_httpget }
sub perl6_curlopt_ssl_verifyhost returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_VERIFYHOST is export { perl6_curlopt_ssl_verifyhost }
sub perl6_curlopt_cookiejar returns int is native('libperl6_curl') { * }
sub CURLOPT_COOKIEJAR is export { perl6_curlopt_cookiejar }
sub perl6_curlopt_ssl_cipher_list returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_CIPHER_LIST is export { perl6_curlopt_ssl_cipher_list }
sub perl6_curlopt_http_version returns int is native('libperl6_curl') { * }
